Test/git-issues/git-issue-478-errors.dfy.expect
git-issue-478-errors.dfy(22,9): Error: Import declaration uses same name as a module in the same scope: LibW
git-issue-478-errors.dfy(26,9): Error: Import declaration uses same name as a module in the same scope: LibX
git-issue-478-errors.dfy(36,7): Error: Duplicate module name: M
git-issue-478-errors.dfy(7,7): Error: Import declaration uses same name as a module in the same scope: LibA
git-issue-478-errors.dfy(11,7): Error: Import declaration uses same name as a module in the same scope: LibB
git-issue-478-errors.dfy(37,7): Error: Import declaration uses same name as a module in the same scope: M
git-issue-478-errors.dfy(38,7): Error: Import declaration uses same name as a module in the same scope: M
git-issue-478-errors.dfy(40,7): Error: Import declaration uses same name as a module in the same scope: M
git-issue-478-errors.dfy(41,7): Error: Import declaration uses same name as a module in the same scope: M
git-issue-478-errors.dfy(44,7): Error: Duplicate name of import: N
git-issue-478-errors.dfy(48,14): Error: Import declaration uses same name as a module in the same scope: AA
git-issue-478-errors.dfy(49,14): Error: Import declaration uses same name as a module in the same scope: BB
git-issue-478-errors.dfy(59,14): Error: Import declaration uses same name as a module in the same scope: X
git-issue-478-errors.dfy(65,14): Error: Duplicate name of import: R
14 resolution/type errors detected in git-issue-478-errors.dfy
